--- a/.gitignore
+++ b/.gitignore
@@ -14,17 +14,17 @@ m4/lt~obsolete.m4
 autom4te.cache/
 build-aux/
 config.h.in
-config.h
 config.log
 config.status
 configure
 libtool
 .deps
 .libs
-src/libaacs/aacs-version.h
 src/parser_test
 src/aacs_info
 src/keydbcfg-lexer.c
 src/keydbcfg-parser.c
 src/keydbcfg-parser.h
 stamp-h1
+
+build*/
